--- a/.github/workflows/sync_latest.yml
+++ b/.github/workflows/sync_latest.yml
@@ -34,6 +34,12 @@ jobs:
         
         git clone --depth 1 --branch luci-smartdns-new-version https://github.com/xiaorouji/openwrt-passwall.git tmp/luci-app-passwall
         rsync -av --checksum tmp/luci-app-passwall/luci-app-passwall/ "luci-app-passwall"
+      
+        git clone https://github.com/pymumu/smartdns.git tmp/smartdns
+        rm -rf tmp/smartdns/.git
+        rm -rf tmp/smartdns/.github
+        rsync -av --checksum tmp/smartdns/ "smartdns"
+        
         rm -rf tmp
     - name: Commit changes
       run: |
