--- a/.github/workflows/build-smartdns.yml
+++ b/.github/workflows/build-smartdns.yml
@@ -10,7 +10,7 @@ on:
       update-version-number:
         description: 'set to true if you want to update last version number'
         required: false
-        default: 'false'
+        default: 'true'
 jobs:
   get-version:
     name: get latest version number
@@ -82,6 +82,9 @@ jobs:
           ./package/build-pkg.sh --platform optware --arch all --filearch $GOARCH-optware-edns --static --outputdir /workdir/build
           cp ./src/smartdns /workdir/build/smartdns-$GOARCH-edns -a
           EOF
+          
+          pwd
+          ls
 
           cat >> Makefile.patch << EOF
           --- Makefile
