--- a/.github/workflows/sync_latest.yml
+++ b/.github/workflows/sync_latest.yml
@@ -33,6 +33,11 @@ jobs:
         rsync -av --checksum tmp/openwrt-passwall/ "openwrt-passwall"
         
         git clone --depth 1 --branch luci-smartdns-new-version https://github.com/xiaorouji/openwrt-passwall.git tmp/luci-app-passwall
+        rsync -av --checksum tmp/luci-app-passwall/luci-app-passwall/ "luci-app-passwall-smartdns"
+        sed -i 's/PKG_NAME:=luci-app-passwall/PKG_NAME:=luci-app-passwall-smartdns/g' luci-app-passwall-smartdns/Makefile
+        rm -rf tmp/luci-app-passwall
+        
+        git clone --depth 1 --branch luci https://github.com/xiaorouji/openwrt-passwall.git tmp/luci-app-passwall
         rsync -av --checksum tmp/luci-app-passwall/luci-app-passwall/ "luci-app-passwall"
       
         git clone https://github.com/pymumu/smartdns.git tmp/smartdns
