--- a/.github/workflows/build-passwall.yml
+++ b/.github/workflows/build-passwall.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           ARCH: ${{ matrix.arch }}-openwrt-22.03
           FEEDNAME: packages_ci
-          PACKAGES:  luci-app-passwall chinadns-ng xray-plugin
+          PACKAGES:  luci-app-passwall luci-app-passwall-smartdns chinadns-ng xray-plugin
           NO_REFRESH_CHECK: true
       - name: Time Work
         run:
