--- a/.github/workflows/sync_latest.yml
+++ b/.github/workflows/sync_latest.yml
@@ -50,6 +50,10 @@ jobs:
         rsync -av --checksum tmp/luci-app-mosdns/mosdns/ "mosdns"
         rsync -av --checksum tmp/luci-app-mosdns/v2dat/ "v2dat"
         
+        git clone https://github.com/sbwml/luci-app-alist.git tmp/luci-app-alist
+        rsync -av --checksum tmp/luci-app-alist/luci-app-alist/ "luci-app-alist"
+        rsync -av --checksum tmp/luci-app-alist/alist/ "alist"
+        
         rm -rf tmp
     - name: Commit changes
       run: |
