--- a/.github/workflows/build-mosdns.yml
+++ b/.github/workflows/build-mosdns.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Get version from file name
         id: extract_version
         run: |
-          filename=$(find bin/packages/x86_64/packages_ci -name 'mosdns_*.ipk' -print -quit)
+          filename=$(find bin/packages/${{ matrix.arch }}/packages_ci -name 'mosdns_*.ipk' -print -quit)
           version=$(echo "$filename" | awk -F'[_|-]' '{print $2}')
           echo "::set-output name=version::$version"
 
