--- a/.github/workflows/build-alist.yml
+++ b/.github/workflows/build-alist.yml
@@ -4,8 +4,10 @@ on:
   schedule:
     - cron: "0 6 */2 * *"
   push:
-    tags:
-      - v3.**
+    branches:
+      - main
+    paths:
+      - 'alist/**'
   workflow_dispatch:
 
 jobs:
