--- a/.github/workflows/build-mosdns.yml
+++ b/.github/workflows/build-mosdns.yml
@@ -3,10 +3,12 @@ name: Build mosdns
 on:
   schedule:
     - cron: "0 6 */2 * *"
-  workflow_dispatch:
   push:
-    tags:
-      - v5.**
+    branches:
+      - main
+    paths:
+      - 'mosdns/**'
+  workflow_dispatch:
 
 jobs:
   build:
