--- a/.github/workflows/build-mosdns.yml
+++ b/.github/workflows/build-mosdns.yml
@@ -2,7 +2,12 @@ name: Build mosdns
 
 on:
   schedule:
-    - cron: "0 6 */2 * *"
+    - cron: "0 6 */3 * *"
+  push:
+    branches:
+      - 'main'
+    paths:
+      - 'mosdns/Makefile'
   workflow_dispatch:
 
 jobs:
