--- a/.github/workflows/build-passwall.yml
+++ b/.github/workflows/build-passwall.yml
@@ -2,7 +2,12 @@ name: Build passwall x86-64
 
 on:
   schedule:
-    - cron: "0 6 */2 * *"
+    - cron: "0 6 */3 * *"
+  push:
+    branches:
+      - 'main'
+    paths:
+      - 'luci-app-passwall/Makefile'
   workflow_dispatch:
 
 jobs:
