--- a/.github/workflows/build-unblockneteasemusic.yml
+++ b/.github/workflows/build-unblockneteasemusic.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: passwall-${{ matrix.arch }}
+          name: unblockneteasemusic-${{ matrix.arch }}
           path: bin/packages/${{ matrix.arch }}/packages_ci/*.ipk
 
       - name: Upload packages
