--- a/.github/workflows/sync_latest.yml
+++ b/.github/workflows/sync_latest.yml
@@ -57,7 +57,7 @@ jobs:
         rsync -av --checksum tmp/luci-app-alist/luci-app-alist/ "luci-app-alist"
         rsync -av --checksum tmp/luci-app-alist/alist/ "alist"
   
-        git clone --depth 1 --branch master https://github.com/UnblockNeteaseMusic/luci-app-unblockneteasemusic.git tmp/luci-app-unblockneteasemusic
+        git clone --depth 1 --branch js https://github.com/UnblockNeteaseMusic/luci-app-unblockneteasemusic.git tmp/luci-app-unblockneteasemusic
         rm -rf tmp/luci-app-unblockneteasemusic/.git
         rm -rf tmp/luci-app-unblockneteasemusic/.github
         rsync -av --checksum tmp/luci-app-unblockneteasemusic/ "luci-app-unblockneteasemusic"
