--- a/.github/workflows/build-unblockneteasemusic.yml
+++ b/.github/workflows/build-unblockneteasemusic.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: luci-app-unblockneteasemusic
+          name: ${{ env.ASSET_NAME }}
           path: .github/*.ipk
           
       - name: Upload Releases
