--- a/.github/workflows/build-unblockneteasemusic.yml
+++ b/.github/workflows/build-unblockneteasemusic.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: ${{ env.ASSET_NAME }}
-          path: .github/*.ipk
+          path: .github/sh/*.ipk
           
       - name: Upload Releases
         uses: ncipollo/release-action@v1
@@ -38,4 +38,4 @@ jobs:
           tag: "unblockneteasemusic"
           body: |
             luci-app-unblockneteasemusic for OpemWrt.
-          artifacts: ".github/*.ipk"
+          artifacts: ".github/sh/*.ipk"
