--- a/.github/workflows/build-alist.yml
+++ b/.github/workflows/build-alist.yml
@@ -93,6 +93,7 @@ jobs:
           artifacts: "alist-${{ steps.extract_version.outputs.version }}-${{ matrix.arch }}.tar.gz"
           
       - name: TG
+        if: matrix.arch == 'x86_64'
         run: curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=❤️恭喜主人alist-${{ steps.extract_version.outputs.version }}编译完成！%0A编译时间：$(TZ='Asia/Shanghai' date +%Y年%m月%d日 %H:%M:%S)%0A下载地址：https://github.com/uixsj/openwrt-ipk/releases/tag/alist-${{ steps.extract_version.outputs.version }}"
 
       - name: Old workflow
