--- a/.github/workflows/build-unblockneteasemusic.yml
+++ b/.github/workflows/build-unblockneteasemusic.yml
@@ -39,3 +39,7 @@ jobs:
           body: |
             luci-app-unblockneteasemusic for OpemWrt.
           artifacts: ".github/sh/*.ipk"
+        
+      - name: TG
+        run: curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=❤️恭喜主人unblockneteasemusic-${{ matrix.arch }}.ipk编译完成！%0A编译时间：$(TZ='Asia/Shanghai' date +%Y年%m月%d日 %H:%M:%S)%0A下载地址：https://github.com/uixsj/openwrt-ipk/releases/tag/unblockneteasemusic"
+
