--- a/.github/workflows/build-smartdns.yml
+++ b/.github/workflows/build-smartdns.yml
@@ -128,6 +128,7 @@ jobs:
             ${{ github.workspace }}/smartdns/build/*
             
       - name: TG
+        if: matrix.goarch == 'x86_64'
         run: curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=❤️恭喜主人${{ steps.tag.outputs.release_tag }}编译完成！%0A编译时间：$(TZ='Asia/Shanghai' date +%Y年%m月%d日 %H:%M:%S)%0A下载地址：https://github.com/uixsj/openwrt-ipk/releases/tag/${{ steps.tag.outputs.release_tag }}"
 
   build-luci:
