--- a/.github/workflows/sync_latest.yml
+++ b/.github/workflows/sync_latest.yml
@@ -27,17 +27,17 @@ jobs:
       run: |
         mkdir tmp
         
-        git clone https://github.com/xiaorouji/openwrt-passwall.git tmp/openwrt-passwall
+        git clone https://github.com/xiaorouji/openwrt-passwall-packages.git tmp/openwrt-passwall
         rm -rf tmp/openwrt-passwall/.git
         rm -rf tmp/openwrt-passwall/.github
         rsync -av --checksum tmp/openwrt-passwall/ "openwrt-passwall"
         
-        git clone --depth 1 --branch luci-smartdns-new-version https://github.com/xiaorouji/openwrt-passwall.git tmp/luci-app-passwall
+        git clone --depth 1 --branch luci-smartdns-dev https://github.com/xiaorouji/openwrt-passwall.git tmp/luci-app-passwall
         rsync -av --checksum tmp/luci-app-passwall/luci-app-passwall/ "luci-app-passwall-smartdns"
         sed -i 's/PKG_NAME:=luci-app-passwall/PKG_NAME:=luci-app-passwall-smartdns/g' luci-app-passwall-smartdns/Makefile
         rm -rf tmp/luci-app-passwall
         
-        git clone --depth 1 --branch luci https://github.com/xiaorouji/openwrt-passwall.git tmp/luci-app-passwall
+        git clone --depth 1 https://github.com/xiaorouji/openwrt-passwall.git tmp/luci-app-passwall
         rsync -av --checksum tmp/luci-app-passwall/luci-app-passwall/ "luci-app-passwall"
       
         git clone --depth 1 https://github.com/xiaorouji/openwrt-passwall2.git tmp/luci-app-passwall2
