--- a/.github/workflows/build-passwall2.yml
+++ b/.github/workflows/build-passwall2.yml
@@ -19,6 +19,8 @@ jobs:
       matrix:
         arch:
           - x86_64
+        tag:
+          - openwrt-22.03
 
     steps:
       - uses: actions/checkout@v3
@@ -26,12 +28,13 @@ jobs:
           fetch-depth: 0
 
       - name: Build
-        uses: sbwml/openwrt-gh-action-sdk@go1.20
+        uses: sbwml/openwrt-gh-action-sdk@helloworld
         env:
-          ARCH: ${{ matrix.arch }}-openwrt-22.03
+          ARCH: ${{ matrix.arch }}-${{ matrix.tag }}
           FEEDNAME: packages_ci
           PACKAGES:  luci-app-passwall2 chinadns-ng xray-plugin
           NO_REFRESH_CHECK: true
+          IGNORE_ERRORS: true
       - name: Time Work
         run:
           echo "TAG_TIME=$(date +"%Y%m%d")" >> $GITHUB_ENV
