--- a/.github/workflows/build-mosdns.yml
+++ b/.github/workflows/build-mosdns.yml
@@ -1,8 +1,8 @@
 name: Build mosdns
 
 on:
-  schedule:
-    - cron: "0 6 */3 * *"
+  #schedule:
+    #- cron: "0 6 */3 * *"
   push:
     branches:
       - 'main'
