--- a/.github/workflows/sync_latest.yml
+++ b/.github/workflows/sync_latest.yml
@@ -32,7 +32,7 @@ jobs:
         rm -rf tmp/openwrt-passwall/.github
         rsync -av --checksum tmp/openwrt-passwall/ "openwrt-passwall"
         
-        git clone --depth 1 --branch luci-smartdns-dev https://github.com/xiaorouji/openwrt-passwall.git tmp/luci-app-passwall
+        git clone --depth 1 https://github.com/xiaorouji/openwrt-passwall.git tmp/luci-app-passwall
         rsync -av --checksum tmp/luci-app-passwall/luci-app-passwall/ "luci-app-passwall-smartdns"
         sed -i 's/PKG_NAME:=luci-app-passwall/PKG_NAME:=luci-app-passwall-smartdns/g' luci-app-passwall-smartdns/Makefile
         rm -rf tmp/luci-app-passwall
