--- a/.github/workflows/build-smartdns.yml
+++ b/.github/workflows/build-smartdns.yml
@@ -1,8 +1,8 @@
 name: Build smartdns
 
 on:
-  schedule:
-    - cron: "0 6 */3 * *"
+  #schedule:
+    #- cron: "0 6 */3 * *"
   workflow_dispatch:
     inputs:
       update-version-number:
