--- a/.github/workflows/build-unblockneteasemusic.yml
+++ b/.github/workflows/build-unblockneteasemusic.yml
@@ -1,8 +1,8 @@
 name: Build unblockneteasemusic
 
 on:
-  schedule:
-    - cron: "0 6 */3 * *"
+  #schedule:
+    #- cron: "0 6 */3 * *"
   workflow_dispatch:
 
 jobs:
